turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:18: error: type mismatch;
 found   : Unit
 required: Int
	var k : Int = PosCouleur(getCouleurSol(),colors) 
                                ^LangtonsAnt:20: error: type mismatch;
 found   : String("R")
 required: Char
		case "R"	=> setCouleurSol(colors(k));droite();avance()
                     ^LangtonsAnt:21: error: type mismatch;
 found   : String("L")
 required: Char
		case "L" =>  setCouleurSol(colors(k));gauche();avance()
                     ^